Feat: Usando nova implementação de hotreload